@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -54,7 +54,7 @@ public class gctest04 {
     {
         try
         {
-            queueLimit = new Integer(args[0]).intValue();
+            queueLimit = Integer.valueOf(args[0]).intValue();
         }
         catch (NumberFormatException e)
         {
